# cpp23_result

./: .gitignore  CMakeLists.txt  README.md
cpp23_result/: CMakeLists.txt  cpp23_result.cpp  cpp23_result.h  result.h
